[package]
name = "kami-parser"
version = "0.8.0"
edition = "2021"
repository = "https://github.com/Lilith-In-Starlight/kami-parser"
homepage = "https://github.com/Lilith-In-Starlight/kami-parser"
description = "Kami tries to be a machine-first human-also-first markup language"
readme = "README.md"
license-file = "LICENSE.md"
keywords = ["markup-language", "kami", "parser", "html"]
categories = ["parser-implementations", "command-line-utilities", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
htmlentity = "1.2.0"

[lib]
bench = false
